[2025.08.17] modify frontend